
Changes in JMurmel-1.4.2 relative to JMurmel-1.4.1

 * changed write, writeln, lnwrite, format, format-locale
   to also accept an adjustable string as destination
 * changed log to accept a second optional parameter


Changes in JMurmel-1.4.1 relative to JMurmel-1.4
released: 2023-02-04

 * fixed sxhash to return nonnegative integer values
 * fixed using macroexpand-1 & gensym in compiled code

 * added the function "string"

 * mlib: added multiple-value-list, nth-value

 * don't merge Windows launcher + jar to avoid virus warnings


Changes in JMurmel-1.4 relative to JMurmel-1.3.1
released: 2023-01-13

 * removed the undocumented function "fatal" from Murmel,
   moved the function "error" from mlib to Murmel and now it is similar to CL's "error"
 * moved "equal" from mlib to Murmel

 * added the functions "read-from-string", "write-to-string"
 * added the functions "read-textfile-lines", "read-textfile", "write-textfile-lines", "write-textfile"
 * added the special form "try" and the function "typep"
 * added condition types, the global variable *condition-handler* and some condition handling
 * added hash-tables

 * mlib: added the functions parse, parse-integer, min, max,
   string-trim, string-replace, string-split, string-join
 * mlib: added gethash, remhash, maphash, "(setf (gethash..."

 * added Windows slim package (needs an installed Java8+) c/o Launch4j
 * added linux and Windows native executables c/o GraalVM


Changes in JMurmel-1.3.1 relative to JMurmel-1.3
released: 2022-12-04

 * fixed cmdline parameter -XX-dyn and various other feature-flags


Changes in JMurmel-1.3 relative to JMurmel-1.2.2
released: 2022-11-12

 * changed car and cdr so that they are no longer defined for symbols, i.e. (car 'aaa)
   now is an error.
 * changed the evaluator of the interpreter so that lists whose car is 'lambda' are
   no longer valid functions. e.g.
     (apply '(lambda (a b) (+ a b)) '(1 2))
   no longer works but gives an error.